--- a/modules/gateway/assertions/SamlpAssertion/src/main/java/com/l7tech/external/assertions/samlpassertion/console/resources/SubjectConfirmationWizardStepPanel.form
+++ b/modules/gateway/assertions/SamlpAssertion/src/main/java/com/l7tech/external/assertions/samlpassertion/console/resources/SubjectConfirmationWizardStepPanel.form
@@ -220,7 +220,7 @@
               <visible value="true"/>
             </properties>
           </component>
-          <grid id="22932" binding="addValidityPeriodPanel" layout-manager="GridLayoutManager" row-count="3" column-count="2" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+          <grid id="22932" binding="addValidityPeriodPanel" layout-manager="GridLayoutManager" row-count="2" column-count="2" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
             <margin top="0" left="0" bottom="0" right="0"/>
             <constraints>
               <grid row="3" column="0" row-span="1" col-span="2" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
@@ -228,37 +228,11 @@
             <properties>
               <visible value="true"/>
             </properties>
-            <border type="none"/>
+            <border type="none" title="Validity Period"/>
             <children>
-              <component id="8238" class="javax.swing.JCheckBox" binding="addValidityPeriodCheckBox" default-binding="true">
-                <constraints>
-                  <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
-                </constraints>
-                <properties>
-                  <text value="Add &amp;Validity Period"/>
-                </properties>
-              </component>
-              <component id="14bb" class="javax.swing.JLabel" binding="notBeforeLabel">
-                <constraints>
-                  <grid row="1" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="2" use-parent-layout="false"/>
-                </constraints>
-                <properties>
-                  <labelFor value="b33a6"/>
-                  <text value="Not &amp;Before seconds in past:"/>
-                </properties>
-              </component>
-              <component id="8d994" class="javax.swing.JLabel" binding="notAfterLabel">
-                <constraints>
-                  <grid row="2" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="2" use-parent-layout="false"/>
-                </constraints>
-                <properties>
-                  <labelFor value="e72e2"/>
-                  <text value="Not &amp;On or After seconds in future:"/>
-                </properties>
-              </component>
               <component id="b33a6" class="javax.swing.JSpinner" binding="notBeforeSpinner" default-binding="true">
                 <constraints>
-                  <grid row="1" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="8" fill="0" indent="0" use-parent-layout="false">
+                  <grid row="0" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="8" fill="0" indent="0" use-parent-layout="false">
                     <preferred-size width="75" height="-1"/>
                   </grid>
                 </constraints>
@@ -266,11 +240,27 @@
               </component>
               <component id="e72e2" class="javax.swing.JSpinner" binding="notOnOrAfterSpinner" default-binding="true">
                 <constraints>
-                  <grid row="2" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="8" fill="0" indent="0" use-parent-layout="false">
+                  <grid row="1" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="8" fill="0" indent="0" use-parent-layout="false">
                     <preferred-size width="75" height="-1"/>
                   </grid>
                 </constraints>
                 <properties/>
+              </component>
+              <component id="3913c" class="javax.swing.JCheckBox" binding="notBeforeSecondsInCheckBox" default-binding="true">
+                <constraints>
+                  <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
+                </constraints>
+                <properties>
+                  <text value="Not &amp;Before seconds in past:"/>
+                </properties>
+              </component>
+              <component id="d3c95" class="javax.swing.JCheckBox" binding="notOnOrAfterCheckBox" default-binding="true">
+                <constraints>
+                  <grid row="1" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
+                </constraints>
+                <properties>
+                  <text value="Not &amp;On or After seconds in future:"/>
+                </properties>
               </component>
             </children>
           </grid>
