--- a/modules/gateway/console/src/main/java/com/l7tech/console/panels/saml/resources/SubjectConfirmationWizardStepPanel.form
+++ b/modules/gateway/console/src/main/java/com/l7tech/console/panels/saml/resources/SubjectConfirmationWizardStepPanel.form
@@ -251,7 +251,7 @@
                   <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
                 </constraints>
                 <properties>
-                  <text value="Not Before seconds in past:"/>
+                  <text value="Not &amp;Before seconds in past:"/>
                 </properties>
               </component>
               <component id="d7869" class="javax.swing.JCheckBox" binding="notOnOrAfterCheckBox" default-binding="true">
@@ -259,7 +259,7 @@
                   <grid row="1" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
                 </constraints>
                 <properties>
-                  <text value="Not On or After seconds in future:"/>
+                  <text value="Not &amp;On or After seconds in future:"/>
                 </properties>
               </component>
             </children>
