--- a/modules/gateway/assertions/SamlpAssertion/src/main/java/com/l7tech/external/assertions/samlpassertion/console/resources/SamlpResponseBuilderPropertiesDialog.form
+++ b/modules/gateway/assertions/SamlpAssertion/src/main/java/com/l7tech/external/assertions/samlpassertion/console/resources/SamlpResponseBuilderPropertiesDialog.form
@@ -6,8 +6,8 @@
       <xy x="48" y="54" width="572" height="505"/>
     </constraints>
     <properties>
-      <minimumSize width="487" height="366"/>
-      <preferredSize width="487" height="366"/>
+      <minimumSize width="487" height="386"/>
+      <preferredSize width="487" height="386"/>
       <requestFocusEnabled value="true"/>
     </properties>
     <border type="none"/>
@@ -133,7 +133,7 @@
               </component>
             </children>
           </grid>
-          <grid id="b816e" binding="responseElementsPanel" layout-manager="GridLayoutManager" row-count="2" column-count="2" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+          <grid id="b816e" binding="responseElementsPanel" layout-manager="GridLayoutManager" row-count="3" column-count="2" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
             <margin top="0" left="0" bottom="0" right="0"/>
             <constraints>
               <grid row="3" column="0" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
@@ -161,7 +161,7 @@
               </component>
               <component id="35976" class="javax.swing.JLabel" binding="extensionsLabel">
                 <constraints>
-                  <grid row="1" column="0" row-span="1" col-span="1" vsize-policy="3" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false">
+                  <grid row="2" column="0" row-span="1" col-span="1" vsize-policy="3" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false">
                     <preferred-size width="101" height="15"/>
                   </grid>
                 </constraints>
@@ -170,6 +170,22 @@
                 </properties>
               </component>
               <component id="1b844" class="javax.swing.JTextField" binding="extensionsTextField">
+                <constraints>
+                  <grid row="2" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
+                    <preferred-size width="150" height="-1"/>
+                  </grid>
+                </constraints>
+                <properties/>
+              </component>
+              <component id="febc4" class="javax.swing.JLabel" binding="encryptedAssertionsLabel">
+                <constraints>
+                  <grid row="1" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
+                </constraints>
+                <properties>
+                  <text resource-bundle="com/l7tech/external/assertions/samlpassertion/console/SamlpResponseBuilderPropertiesDialog" key="responseElements.encryptedAssertions.2_0_only"/>
+                </properties>
+              </component>
+              <component id="75552" class="javax.swing.JTextField" binding="encryptedAssertionsTextField">
                 <constraints>
                   <grid row="1" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
                     <preferred-size width="150" height="-1"/>
