--- a/modules/gateway/console/src/main/java/com/l7tech/console/panels/resources/CertImportMethods.form
+++ b/modules/gateway/console/src/main/java/com/l7tech/console/panels/resources/CertImportMethods.form
@@ -43,7 +43,7 @@
               <grid row="2" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
             </constraints>
             <properties>
-              <text value="Copy and Paste (Base64 PEM):"/>
+              <text value="Copy and Paste:"/>
             </properties>
           </component>
           <component id="a273d" class="javax.swing.JTextField" binding="urlConnTextField">
