--- a/modules/gateway/assertions/EsmAssertion/src/main/java/com/l7tech/external/assertions/esm/console/resources/EsmSubscriptionAssertionPropertiesDialog.form
+++ b/modules/gateway/assertions/EsmAssertion/src/main/java/com/l7tech/external/assertions/esm/console/resources/EsmSubscriptionAssertionPropertiesDialog.form
@@ -22,7 +22,7 @@
           <grid row="1" column="0" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties/>
-        <border type="etched" title="ESM Notification Policy"/>
+        <border type="etched" title="WSDM Notification Policy"/>
         <children>
           <scrollpane id="d21ca">
             <constraints>
