--- a/modules/gateway/console/src/main/java/com/l7tech/console/panels/resources/RequestSizeLimitPropertyDialog.form
+++ b/modules/gateway/console/src/main/java/com/l7tech/console/panels/resources/RequestSizeLimitPropertyDialog.form
@@ -3,7 +3,7 @@
   <grid id="c0695" binding="mainPanel" layout-manager="GridLayoutManager" row-count="7" column-count="5" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
     <margin top="8" left="8" bottom="8" right="8"/>
     <constraints>
-      <xy x="55" y="129" width="453" height="200"/>
+      <xy x="55" y="129" width="693" height="338"/>
     </constraints>
     <properties/>
     <border type="none"/>
@@ -21,7 +21,7 @@
           <grid row="2" column="3" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
-          <text value="KBytes"/>
+          <text resource-bundle="com/l7tech/console/panels/resources/RequestSizeLimitDialog" key="kbytes.label"/>
         </properties>
       </component>
       <component id="a3f9f" class="javax.swing.JCheckBox" binding="exemptAttachmentCheck">
@@ -29,7 +29,7 @@
           <grid row="3" column="1" row-span="1" col-span="2" vsize-policy="0" hsize-policy="3" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
-          <text value="Exempt MIME attachments from the size limit"/>
+          <text resource-bundle="com/l7tech/console/panels/resources/RequestSizeLimitDialog" key="excempt.mime.label"/>
         </properties>
       </component>
       <vspacer id="6e71e">
@@ -39,20 +39,12 @@
           </grid>
         </constraints>
       </vspacer>
-      <component id="cdfa3" class="javax.swing.JLabel">
-        <constraints>
-          <grid row="0" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
-        </constraints>
-        <properties>
-          <text value="Specify the request size limit"/>
-        </properties>
-      </component>
       <component id="c0fbd" class="javax.swing.JLabel">
         <constraints>
           <grid row="2" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
-          <text value="Maximum Size Limit"/>
+          <text resource-bundle="com/l7tech/console/panels/resources/RequestSizeLimitDialog" key="max.limit.label"/>
         </properties>
       </component>
       <grid id="78568" layout-manager="GridLayoutManager" row-count="1" column-count="3" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
@@ -68,7 +60,7 @@
               <grid row="0" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
             </constraints>
             <properties>
-              <text value="OK"/>
+              <text resource-bundle="com/l7tech/console/panels/resources/RequestSizeLimitDialog" key="ok.button"/>
             </properties>
           </component>
           <component id="cd41e" class="javax.swing.JButton" binding="cancelButton">
@@ -76,7 +68,7 @@
               <grid row="0" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
             </constraints>
             <properties>
-              <text value="Cancel"/>
+              <text resource-bundle="com/l7tech/console/panels/resources/RequestSizeLimitDialog" key="cancel.button"/>
             </properties>
           </component>
           <hspacer id="600ba">
@@ -105,6 +97,23 @@
           </grid>
         </constraints>
       </hspacer>
+      <grid id="eebaa" binding="panel" layout-manager="GridLayoutManager" row-count="1" column-count="2" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+        <margin top="0" left="0" bottom="0" right="0"/>
+        <constraints>
+          <grid row="0" column="1" row-span="1" col-span="3" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
+        </constraints>
+        <properties/>
+        <border type="none" title-resource-bundle="com/l7tech/console/panels/resources/RequestSizeLimitDialog" title-key="target.title">
+          <title-color color="-16777216"/>
+        </border>
+        <children>
+          <nested-form id="50081" form-file="com/l7tech/console/panels/resources/TargetMessagePanel.form" binding="targetMessagePanel">
+            <constraints>
+              <grid row="0" column="0" row-span="1" col-span="2" vsize-policy="3" hsize-policy="7" anchor="9" fill="0" indent="0" use-parent-layout="false"/>
+            </constraints>
+          </nested-form>
+        </children>
+      </grid>
     </children>
   </grid>
 </form>
